Do not reschedule more than one liveness timeout callback at a time

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • Repl E (01/08/16)
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Due to races it is possible to schedule more than one liveness timeout which calls _handleLivenessTimeout. These will then reschedule and can increase the load on the system.

            Assignee:
            Scott Hernandez (Inactive)
            Reporter:
            Scott Hernandez (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: