SERVER-21795: Do not reschedule more than one liveness timeout callback at a time

(cherry picked from commit 5ab583935e048522d2129ab11f6c485a59dee7df)