src/mongo/db/repl/replication_coordinator_impl_heartbeat.cpp
@@ -554,7 +554,12 @@ void ReplicationCoordinatorImpl::_startHeartbeats_inlock(
 void ReplicationCoordinatorImpl::_handleLivenessTimeout(
     const ReplicationExecutor::CallbackArgs& cbData) {
     stdx::lock_guard<stdx::mutex> lk(_mutex);
-    _handleLivenessTimeoutCbh = CallbackHandle();
+    // Only reset the callback handle if it matches, otherwise more will be coming through
+    if (cbData.myHandle == _handleLivenessTimeoutCbh) {
+        _handleLivenessTimeoutCbh = CallbackHandle();
+    } else {
+        warning() << "The liveness timeout does not match callback handle, so not resetting it.";
+    }
     if (!cbData.status.isOK()) {
         return;
     }
